# mygrep

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake-multi-platform.yml
docs/: Classes.plantuml  Sequence.planuml
headers/: ConcurrentQueue.hpp  Config.hpp  DirectoryCrawler.hpp  PatternSearcher.hpp  ThreadManager.hpp  ThreadSafeQueue.hpp  utility.hpp
src/: DirectoryCrawler.cpp  PatternSearcher.cpp  ThreadManager.cpp
tests/: PatternSearcher.test.hpp  ThreadManager.test.hpp  generate_test_data.py
tests/unitTests/: PatternSearcher.test.hpp  ThreadManager.test.hpp  main.cpp
